@@ -9,17 +9,17 @@ $_SESSION['browser_version']=$version;
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 <html>
 <head>
-<title><?php echo $site_name." - (MODx CMS Manager)"; ?></title>
-<meta http-equiv="Content-Type" content="text/html; charset=<?php echo $modx_charset; ?>">
-<script type="text/javascript" src="media/script/session.js"></script>
+    <title><?php echo $site_name." - (MODx CMS Manager)"; ?></title>
+    <meta http-equiv="Content-Type" content="text/html; charset=<?php echo $modx_charset; ?>" />
+    <script type="text/javascript" src="media/script/session.js"></script>
 </head>
-<frameset rows="0,20,50,*" frameborder="0" border="0">
-	<frame src="index.php?a=1&f=scripter" name="scripter" scrolling="no" noresize>
-	<frame src="index.php?a=1&f=topbar" name="topFrame" scrolling="no" noresize>
-	<frame name="mainMenu" src="index.php?a=1&f=l4mnu" scrolling="no" noresize>
-	<frameset cols="280,*" border="<?php echo !($browser=='ie') ? 6 : 0 ;?>" frameborder="yes" FRAMESPACING="<?php echo !($browser=='ie') ? 1 : 6 ;?>"  resize>
-		<frame src="index.php?a=1&f=3" name="menu" FRAMEBORDER="no" BORDER="0" bordercolor="#FFFFFF" scrolling="AUTO">
-		<frame src="index.php?a=2" name="main" scrolling="auto" FRAMEBORDER="no" BORDER="0" BORDERCOLOR="#FFFFFF">
+<frameset rows="0,20,50,*" border="0">
+	<frame src="index.php?a=1&amp;f=scripter" name="scripter" scrolling="no" frameborder="0">
+	<frame src="index.php?a=1&amp;f=topbar" name="topFrame" scrolling="no" frameborder="0">
+	<frame name="mainMenu" src="index.php?a=1&amp;f=l4mnu" scrolling="no" frameborder="0">
+	<frameset cols="260,*" border="3">
+		<frame src="index.php?a=1&amp;f=3" name="menu" scrolling="auto" frameborder="0">
+		<frame src="index.php?a=2" name="main" scrolling="auto" frameborder="0">
 	</frameset>
 </frameset>
 <noframes>This software requires a browser with support for frames.</noframes>
