@@ -8,10 +8,12 @@ if(IN_MANAGER_MODE!="true") die("<b>INCLUDE_ORDERING_ERROR</b><br /><br />Please
 		exit;
 	}
 ?>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-<title>Tree loader</title>
-<meta http-equiv="Content-Type" content="text/html; charset=<?php echo $modx_charset; ?>">
+    <title>Tree loader</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=<?php echo $modx_charset; ?>">
+    <link rel="stylesheet" type="text/css" href="media/style/<?php echo $theme; ?>style.css" />
 </head>
 <body onload="javascript:parent.rpcLoadData(output)">
 <!--body onload="javascript:parent.rpcLoadData(document.body.innerHTML)"-->
@@ -106,7 +108,7 @@ if(IN_MANAGER_MODE!="true") die("<b>INCLUDE_ORDERING_ERROR</b><br /><br />Please
 			$pagetitle = htmlspecialchars($pagetitle);
 			$pagetitleDisplay = $published==0 ? "<span class='unpublishedNode'>$pagetitle</span>" : ($hidemenu==1 ? "<span class='notInMenuNode'>$pagetitle</span>":"<span class='publishedNode'>$pagetitle</span>");
 			$pagetitleDisplay = $deleted==1 ? "<span class='deletedNode'>$pagetitle</span>" : $pagetitleDisplay;
-			$weblinkDisplay = $type=="reference" ? '&nbsp;<img align="absmiddle" src="media/style/'.$theme.'images/tree/web.gif">' : '' ;
+			$weblinkDisplay = $type=="reference" ? '&nbsp;<img src="media/style/'.$theme.'images/tree/link_go.png">' : '' ;
 
 
 			$alt = !empty($alias) ? $_lang['alias'].": ".$alias : $_lang['alias'].": - ";
